@@ -3,8 +3,11 @@ Revision history for libev, a high-performance and full-featured event loop.
 TODO: revisit 59.x timer in the light of modern powersaving
 TODO: ^ maybe just increase it when timerfd, modern linux only thing that counts?
 TODO: document EV_TSTAMP_T
+TODO: for next ABI/API change, consider moving EV__IOFDSSET into io->fd instead and provide a getter.
 
 TODO: add ev_io_set_events, or ev_io_modify, or ev_io_change, or..., without IOFDSET
+TODO: fix documentation of read-only] [read-write] and so on
+TODO: maybe allow events = 0 for io watchers
 	- the 4.31 timerfd code wrongly changes the priority of the signal
           fd watcher, which is usually harmless unless signal fds are
           also used (found via cpan tester service).
